# ska-pydada

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  mypy.ini  pyproject.toml
.gitlab/ci/: docs.yml  notebook.yml
data/: temporal_fidelity_pass.dada
docs/src/: conf.py  index.rst
docs/src/_static/css/: custom.css
docs/src/_static/img/: favicon.html  favicon_mono.html
docs/src/api/: index.rst
docs/src/package/: guide.rst
notebooks/: example_usage.ipynb  example_useage.ipynb  pfb-inversion-spectral-fidelity.ipynb  pfb-inversion-temporal-fidelity.ipynb
src/ska_pydada/: __init__.py  ascii_header.py  common.py  dada_file.py  example.py  unpacker.py
src/ska_pydada/utils/: __init__.py  pbf_analysis.py  pfb_analysis.py
src/ska_pydada/utils/pfb_analysis/: __init__.py  common.py  spectral.py  temporal.py
tests/: __init__.py  conftest.py  test_example.py
tests/unit/: conftest.py  test_ascii_header.py  test_dada_file.py  test_pfb_analysis.py  test_pfb_spectral_analysis.py  test_pfb_temporal_analysis.py  test_ska_unpacker.py
tests/unit/data/: header.txt  temporal_fidelity_fail.dada
