[tool.poetry]
name = "ska-pydada"
version = "0.0.1"
description = "SKA Pulsar DADA Library"
authors = [
    "Andrew Jameson <ajameson@fourierspace.com.au>",
    "Jesmigel Cantos <jesmigel.developer@gmail.com>",
    "Will Gauvin <wgauvin@swin.edu.au>",
    "Willem van Straten <wvanstraten@fourierspace.com.au>"

]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "ska_pydada", from ="src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-bdd = "^7.1.1"
pytest-cov = "^4.1.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-metadata = "^3.1.1"
pytest-mock = "^3.12.0"
pytest-pycodestyle = "^2.3.1"
pytest-pydocstyle = "^2.3.2"
pytest-pylint = "^0.21.0"
pytest-runner = "^6.0.1"
black = "^24.2.0"
flake8 = "^7.0.0"
pylint-junit = "^0.3.4"

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-plantuml = "^0.29"
sphinx-autodoc-typehints = "^2.0.0"
docutils = "^0.20.1"
markupsafe = "^2.1.5"
sphinx = "^7.2.6"
exhale = "^0.3.7"
breathe = "^4.35.0"
transitions = "^0.9.0"
typing-extensions = "^4.10.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
