[tool.poetry]
name = "ska-pydada"
version = "0.0.1"
description = "SKA Pulsar DADA Library"
authors = [
    "Andrew Jameson <ajameson@fourierspace.com.au>",
    "Jesmigel Cantos <jesmigel.developer@gmail.com>",
    "Will Gauvin <wgauvin@swin.edu.au>",
    "Willem van Straten <wvanstraten@fourierspace.com.au>"

]
license = "BSD-3-Clause"
readme = "README.md"
packages = [
  { include = "ska_pydada", from ="src" },
]

[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simplei"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12.2"
numpy = "^1.23.0"
nptyping = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
backoff = "*"
black = "*"
coverage = "*"
docformatter = "*"
flake8 = "*"
flake8-black = "*"
flake8-docstrings = "*"
flake8-formatter-junit-xml = "*"
flake8-rst-docstrings = "*"
flaky = "*"
ipython = "*"
isort = "*"
mock = "*"
mypy = "*"
nbqa = "*"
nbmake = "*"
pyflakes = "*"
pylint = "*"
pylint-junit = "*"
pytest = "*"
pytest-cov = "*"
pytest-json-report = "*"
pytest-metadata = "*"
pytest-mock = "*"
pytest-pycodestyle = "*"
pytest-pydocstyle = "*"
pytest-pylint = "*"
pytest-runner = "*"
matplotlib = "*"


[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "*"
sphinxcontrib-plantuml = "*"
sphinx-autodoc-typehints = "*"
docutils = "<0.18"
markupsafe = "<2.1.0"
sphinx = "*"
transitions = "*"
typing-extensions = "*"
recommonmark = "*"
nbsphinx = "*"
pandoc = "*"
ipython = "*"


[tool.poetry.group.jupyterlab.dependencies]
jupyter = "*"
jupyterlab = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
